coded parallel animation for pixels

--- a/pixel.html
+++ b/pixel.html
@@ -27,7 +27,7 @@
         <div class='graph'></div>
     </div>
 
-    <script src="pixel.js"></script>
+    <script src="parallel.js"></script>
 </body>
 
 </html>
