coded coroutine animation for pixels

--- a/pixel.html
+++ b/pixel.html
@@ -27,7 +27,8 @@
         <div class='graph'></div>
     </div>
 
-    <script src="parallel.js"></script>
+    <script src="https://d3js.org/d3-queue.v3.min.js"></script>
+    <script src="coroutine.js"></script>
 </body>
 
 </html>
