finished all 3 animations with queue

--- a/pixel.html
+++ b/pixel.html
@@ -28,7 +28,7 @@
     </div>
 
     <script src="https://d3js.org/d3-queue.v3.min.js"></script>
-    <script src="coroutine.js"></script>
+    <script src="animations.js"></script>
 </body>
 
 </html>
